Using bootstrap - table class

--- a/src/ECC.WebApp/Views/Home/Index.cshtml
+++ b/src/ECC.WebApp/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="text-center">
     <h1 class="display-4">Emergency Care Centre App</h1>
 
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <td>
