--- a/src/ECC.WebApp/Views/Home/Admit.cshtml
+++ b/src/ECC.WebApp/Views/Home/Admit.cshtml
@@ -1,60 +1,58 @@
-﻿@model WebApp.Models.PatientViewModel
+﻿@model WebApp.Models.AdmitViewModel
 @{
     ViewData["Title"] = "Admission";
 }
 
 <div class="text-justify">
     <h1 class="display-4">@ViewData["Title"]</h1>
-    
-    <patient>
-        Name: @Model.Patient.FirstName @Model.Patient.LastName<br />
-        URN: @Model.Patient.Id<br />
-        Date of birth: @Model.Patient.DateOfBirth.ToString("dd-MM-yyyy")<br />
-    </patient>
-    <br />
-    <table class="table">
-        <thead>
-            <tr>
-                <td>
-                    Bed
-                </td>
-                <td>
-                    Date
-                </td>
-                <td>
-                    Time
-                </td>
-                <td>
-                    Nurse
-                </td>
-                <td>
-                    Comment
-                </td>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.Comments)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Bed.Id)
-                    </td>
-                    <td>
-                        @item.LastUpdated.ToString("dd-MM-yyyy")
-                    </td>
-                    <td>
-                        @item.LastUpdated.ToString("hh:mm")
-                    </td>
-                    <td>
-                        @item.Staff
-                    </td>
-                    <td>
-                        @item.Body
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-    <br />
-    <a asp-action="Index" asp-controller="Home">Go back to dashboard</a>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Admit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="BedId" />
+                <div class="form-group">
+                    <label asp-for="PatientId" class="control-label"></label>
+                    <input asp-for="PatientId" class="form-control" readonly="@(true)" />
+                    <span asp-validation-for="PatientId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FirstName" class="control-label"></label>
+                    <input asp-for="FirstName" class="form-control" />
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LastName" class="control-label"></label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="DateOfBirth" class="control-label"></label>
+                    <input asp-for="DateOfBirth" class="form-control" />
+                    <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Body" class="control-label"></label>
+                    <input asp-for="Body" class="form-control" />
+                    <span asp-validation-for="Body" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Staff" class="control-label"></label>
+                    <input asp-for="Staff" class="form-control" />
+                    <span asp-validation-for="Staff" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
+
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
 </div>
